syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "tag.proto";

package com.lodny.rwcommon.grpc;

option java_multiple_files = true;
option java_package = "com.lodny.rwcommon.grpc.comment";

service Comment {
  rpc registerComment (GrpcRegisterCommentRequest) returns (GrpcCommentResponse);
  rpc getCommentsByArticleId (GrpcGetCommentsByArticleIdRequest) returns (GrpcGetCommentsByArticleIdResponse);
  rpc deleteCommentById (GrpcDeleteCommentByIdRequest) returns (Empty);
}


message GrpcRegisterCommentRequest {
  uint64 authorId = 1;
  uint64 articleId = 2;
  string body = 3;
}

message GrpcCommentResponse {
  uint64 id = 1;
  google.protobuf.Timestamp createdAt = 2;
  google.protobuf.Timestamp updatedAt = 3;
  string body = 4;
  uint64 authorId = 5;
}


message GrpcGetCommentsByArticleIdRequest {
  uint64 articleId = 1;
}

message GrpcGetCommentsByArticleIdResponse {
  repeated GrpcCommentResponse comments = 1;
}


message GrpcDeleteCommentByIdRequest {
  uint64 id = 1;
  uint64 articleId = 2;
  uint64 authorId = 3;
}

//message Empty {}
